[B]4.0.0~rework3[/B]
- neue Screenshots

[B]4.0.0~rework2[/B]
- Fix View Typ in movies.py
Ansichten werden nun auch wieder auf den Folgeseiten korrekt angezeigt

[B]4.0.0~rework1[/B]
  03.04.2019
- Autoplay-Qualität auswählbar

[B]3.1.1~nightly6[/B]
  28.03.2019
- ZDF Scrapper Beta
  (nur Serien des letzen Jahres)

[B]3.1.1~nightly5[/B]
  28.03.2019
- Wiederherstellung der Arbeit aus 3.0.10~nightly 23 (untergegangen wegen bekannten "alte Dateien"-Vorfall (internes, nicht in offiziellen Changelog des nächsten Releases aufnehmen))

[B]3.1.1~nightly4[/B]
  28.03.2019
- Neues Justwatch Modul
- Hoffentlich vorerst endgültiger Fix für Netzkino und Netflix
- Watchbox Serien Defekt (momentan Kampagne TV Now)

[B]3.1.1~nightly3[/B]
  26.03.2019
- Fix Cloudflare
- Fic HdFilme.net

[B]3.1.1~nightly2[/B]
  26.03.2019
- Zufallswiedergabe wieder hinzugefügt (Userwunsch)

[B]3.1.1~nightly1[/B]
  26.03.2019
- Fix Suche für Netflix, Netzkino und Watchbox
  Die Suche hat bis jetzt nur den ersten treffer genommen

[B]3.1.0[/B]
  25.03.2019
- Umstrukturierung whatsnew.txt (für Info-Popup)
- Fix Error durch Widget im Log
- höhere Treffergenauigkeit für Netflix, Netzkino und Watchbox
- Watchbox und Netzkino als Premium markiert
- weniger Seiten Anfragen dank Nutzung von Justwatch
- Info-Popup nach Update / Erstinstallation
- Watchbox Encoding Fix
- Gitignore sinnvoll erweitert
- Textanpassungen (Schreibweise, Sprachliches, Formatierung)
- Hinweis zur notwendigen erneuten Autorisierung von Trakt.tv hinzugefügt.
- thumbs.db entfernt
- Neu: Watchbox
- Fix SD-Autoplay Filter
- Doppelter Verfügbarkeits-Check für Netflix
- Kontextmenü-Einträge lassen sich nun unter Einstellungen/Allgemein verwalten
- Zufallswiedergabe entfernt
-  Fanart/Poster Quelle Auswahlmöglichkeit hinzugefügt (control.py, movies.py, lastship.py, metacache.py):
    Es ist bei Filmen nach der Suche möglich, über das Kontexmenü die Fanart/Poster Quelle zu ändern