@@ -1,3 +1,6 @@
+[B]4.0.0~rework4[/B]
+- Staffelbenennung auswählbar (Bibliothek und Download getrennt)
+
 [B]4.0.0~rework3[/B]
 - neue Screenshots
 
